# test-workshop

./: Dockerfile  compose.yaml  pyproject.toml  variables.env
.devx/: compose.local.yaml  compose.yaml  docker-compose.yaml  index.html
.devx/_static/js/: mustache-config.js
.devx/lab_app/: README.md
.devx/lab_custom/: README.md
.devx/lab_intro/: README.md
.devx/lab_setup/: README.md
