[project]
name = "vss-workshop"
description = "Visual Search and Summarization Workshop"
version = "0.1.0"
dependencies = [
    "jupyterlab>=4.0.0",
    "jupyterlab-git>=0.44.0",
    "jupyter-app-launcher>=0.1.0",
]

[tool.brev]
instance_type = "a2-highgpu-2g:nvidia-tesla-a100:2"
workspace_group_id = "GCP"
ports = [
    { name = "jupyter", port = 8888 },
    { name = "frontend", port = 9100 },
    { name = "api", port = 8100 }
]
